[project]
name = "sionna-utils"
version = "0.1.0"
description = "Sionna Utils"
readme = "README.md"
license = "BSD-3-Clause-Clear"
authors = [
    { name = "Louie Lu", email = "git@louie.lu" }
]

requires-python = ">=3.10"
dependencies = [
    "open3d>=0.19.0",
    "sionna-rt>=1.2.0",
]

[dependency-groups]
dev = [
    "pyqt5>=5.15.11",
    "pytest>=8.4.2",
]
